# grpc-example

go/: Makefile  go.mod  go.sum
go/pkg/helloworld/greeter_client/: main.go
go/pkg/helloworld/greeter_server/: main.go
go/proto/helloworld/: helloworld.pb.go  helloworld.proto  helloworld_grpc.pb.go
rust/: Cargo.toml
rust/src/: client.rs  server.rs
